--- a/src/ContentBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
@@ -21,7 +21,8 @@
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.WindowsDX.9000" Version="3.8.9102" />
+    <PackageReference Include="nkast.Xna.Framework" Version="3.9.9001" />
+    <PackageReference Include="MonoGame.Framework.WindowsDX.9000" Version="3.9.9001" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
