--- a/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net4.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net4.csproj
@@ -44,7 +44,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <PackageReference Include="MonoGame.Framework.WindowsDX.9000" Version="3.8.9102" />
+    <PackageReference Include="nkast.Xna.Framework" Version="3.9.9001" />
+    <PackageReference Include="MonoGame.Framework.WindowsDX.9000" Version="3.9.9001" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
