--- a/src/ContentBenchmarks/Benchmarks.Xna.Windows/Benchmarks.Xna.Windows.net4.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Xna.Windows/Benchmarks.Xna.Windows.net4.csproj
@@ -78,6 +78,9 @@
     <Compile Include="..\Benchmarks.Shared\ContentThreadLoadComponent.cs">
       <Link>ContentThreadLoadComponent.cs</Link>
     </Compile>
+    <Compile Include="..\Benchmarks.Shared\ContentMultithreadLoadComponent.cs">
+      <Link>ContentMultithreadLoadComponent.cs</Link>
+    </Compile>
     <Compile Include="..\Benchmarks.Shared\DrawStringComponent.cs">
       <Link>DrawStringComponent.cs</Link>
     </Compile>
