--- a/src/ContentBenchmarks/Benchmarks.Kni.UWP.Core/Benchmarks.Kni.UWP.Core.net4.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.UWP.Core/Benchmarks.Kni.UWP.Core.net4.csproj
@@ -136,5 +136,5 @@
   </PropertyGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder17.targets" />
 </Project>
