--- a/src/ContentBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net4.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net4.csproj
@@ -73,5 +73,5 @@
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder17.targets" />
 </Project>
