--- a/src/DrawBenchmarks/Benchmarks.Kni.BlazorGL/Benchmarks.BlazorGL.net6.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.BlazorGL/Benchmarks.BlazorGL.net6.csproj
@@ -1,32 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+
   <PropertyGroup>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
-    <RootNamespace>Benchmarks</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
     <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
     <OutputPath>..\bin\$(Configuration)\net6\Kni.BlazorGL\</OutputPath>
 	<BaseIntermediateOutputPath>obj\net6.0\</BaseIntermediateOutputPath>
     <Nullable>disable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <RootNamespace>Benchmarks</RootNamespace>
+    <AssemblyName>Benchmarks</AssemblyName>
+    <DefineConstants>$(DefineConstants);BLAZORGL</DefineConstants>
     <MonoGamePlatform>BlazorGL</MonoGamePlatform>
   </PropertyGroup>
   
   <PropertyGroup>
     <BlazorEnableTimeZoneSupport>false</BlazorEnableTimeZoneSupport>
-    <DefineConstants>$(DefineConstants);TRACE;BLAZORGL</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Pages\Index.razor.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="nkast.Xna.Framework" Version="3.9.9001" />
     <PackageReference Include="nkast.Xna.Framework.Blazor" Version="3.9.9001" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />
   </ItemGroup>
+
   <ItemGroup>
     <MonoGameContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
       <Link>Content\BenchmarksContent.mgcb</Link>
