--- a/src/DrawBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net4.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net4.csproj
@@ -42,12 +42,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <PackageReference Include="nkast.Xna.Framework" Version="3.9.9001" />
-	<PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.9.9001" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <PackageReference Include="nkast.Xna.Framework" Version="3.9.9001" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.9.9001" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
