--- a/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
@@ -1,27 +1,33 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <EnableDefaultItems>false</EnableDefaultItems>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
-    <OutputPath>..\bin\$(Configuration)\net6\Kni.WindowsDX\</OutputPath>
-	<BaseIntermediateOutputPath>obj\net6.0\</BaseIntermediateOutputPath>
     <RollForward>Major</RollForward>
+    <UseWindowsForms>true</UseWindowsForms>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
-    <UseWindowsForms>true</UseWindowsForms>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>Benchmarks</RootNamespace>
+    <AssemblyName>Benchmarks</AssemblyName>
+    <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
+    <OutputPath>..\bin\$(Configuration)\net6\Kni.WindowsDX\</OutputPath>
+    <BaseIntermediateOutputPath>obj\net6.0\</BaseIntermediateOutputPath>
     <MonoGamePlatform>Windows</MonoGamePlatform>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="Program.cs" />
-  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="nkast.Xna.Framework" Version="3.9.9001" />
     <PackageReference Include="MonoGame.Framework.WindowsDX.9000" Version="3.9.9001" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
