--- a/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>Benchmarks</AssemblyName>
     <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
     <OutputPath>..\bin\$(Configuration)\net6\Kni.WindowsDX\</OutputPath>
-    <BaseIntermediateOutputPath>obj\net6.0\</BaseIntermediateOutputPath>
+    <IntermediateOutputPath>obj\$(Configuration)\net6.0\</IntermediateOutputPath>
     <MonoGamePlatform>Windows</MonoGamePlatform>
   </PropertyGroup>
 
