--- a/src/ContentBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
     <OutputPath>..\bin\$(Configuration)\net6\Kni.WindowsDX\</OutputPath>
-	<BaseIntermediateOutputPath>obj\net6.0\</BaseIntermediateOutputPath>
+	<IntermediateOutputPath>obj\$(Configuration)\net6.0\</IntermediateOutputPath>
     <RollForward>Major</RollForward>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
