--- a/src/DrawBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net6.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net6.csproj
@@ -9,7 +9,7 @@
     <AssemblyName>Benchmarks</AssemblyName>
     <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
     <OutputPath>..\bin\$(Configuration)\net6\Kni.Android\</OutputPath>
-    <BaseIntermediateOutputPath>obj\net6.0\</BaseIntermediateOutputPath>
+    <IntermediateOutputPath>obj\$(Configuration)\net6.0\</IntermediateOutputPath>
     <MonoGamePlatform>Android</MonoGamePlatform>
     <ApplicationId>com.companyname.Benchmarks</ApplicationId>
     <ApplicationVersion>1</ApplicationVersion>
