--- a/src/DrawBenchmarks/Benchmarks.Mg.Android/Benchmarks.Mg.Android.net6.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Mg.Android/Benchmarks.Mg.Android.net6.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net6.0-android</TargetFramework>
     <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
     <OutputPath>..\bin\$(Configuration)\net6\Mg.Android\</OutputPath>
-	<BaseIntermediateOutputPath>obj\net6.0\</BaseIntermediateOutputPath>
+	<IntermediateOutputPath>obj\$(Configuration)\net6.0\</IntermediateOutputPath>
     <SupportedOSPlatformVersion>23</SupportedOSPlatformVersion>
     <OutputType>Exe</OutputType>
     <ApplicationId>com.companyname.Benchmarks</ApplicationId>
