--- a/src/DrawBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net6.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net6.csproj
@@ -13,7 +13,7 @@
     <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
     <IntermediateOutputPath>obj\$(Configuration)\net6.0\</IntermediateOutputPath>
     <DefineConstants>$(DefineConstants);DESKTOPGL</DefineConstants>
-    <MonoGamePlatform>DesktopGL</MonoGamePlatform>
+    <KniPlatform>DesktopGL</KniPlatform>
   </PropertyGroup>
   
   <PropertyGroup>
@@ -23,8 +23,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="nkast.Xna.Framework" Version="3.9.9001" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.9.9001" />
+    <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.10.9001" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -34,12 +34,12 @@
     <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
+    <KniContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
       <Link>Content\BenchmarksContent.mgcb</Link>
-    </MonoGameContentReference>
+    </KniContentReference>
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder17.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
