--- a/src/ContentBenchmarks/Benchmarks.Fna.OpenGL/Benchmarks.Fna.DesktopGL.net4.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Fna.OpenGL/Benchmarks.Fna.DesktopGL.net4.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>Benchmarks</RootNamespace>
     <AssemblyName>Benchmarks</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MonoGamePlatform>DesktopGL</MonoGamePlatform>
+    <KniPlatform>DesktopGL</KniPlatform>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>..\bin\$(Configuration)\net4\Fna.DesktopGL\</OutputPath>
     <IntermediateOutputPath>obj\$(Configuration)\net4\</IntermediateOutputPath>
@@ -52,9 +52,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
+    <KniContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
       <Link>Content\BenchmarksContent.mgcb</Link>
-    </MonoGameContentReference>
+    </KniContentReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -82,5 +82,5 @@
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder17.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
