--- a/src/ContentBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net4.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net4.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>Benchmarks</RootNamespace>
     <AssemblyName>Benchmarks</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MonoGamePlatform>DesktopGL</MonoGamePlatform>
+    <KniPlatform>DesktopGL</KniPlatform>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <OutputPath>..\bin\$(Configuration)\net4\Kni.DesktopGL\</OutputPath>
     <IntermediateOutputPath>obj\$(Configuration)\net4\</IntermediateOutputPath>
@@ -42,8 +42,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <PackageReference Include="nkast.Xna.Framework" Version="3.9.9001" />
-	<PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.9.9001" />
+    <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
+	<PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.10.9001" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -54,9 +54,9 @@
     <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
+    <KniContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
       <Link>Content\BenchmarksContent.mgcb</Link>
-    </MonoGameContentReference>
+    </KniContentReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -64,5 +64,5 @@
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder17.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
