disable fast deploy

--- a/src/DrawBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net8.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net8.csproj
@@ -15,6 +15,10 @@
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
     <PackageReference Include="MonoGame.Framework.Android.9000" Version="3.10.9001" />
