builder task RC

--- a/src/ContentBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net4.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net4.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Core" />
     <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
     <PackageReference Include="MonoGame.Framework.Android.9000" Version="3.10.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BenchmarksActivity.cs" />
@@ -83,5 +84,4 @@
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
