--- a/src/DrawBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net6.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net6.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
     <PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.10.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -41,5 +42,4 @@
   <ItemGroup>
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
