--- a/src/ContentBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net8.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net8.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
     <PackageReference Include="MonoGame.Framework.Android.9000" Version="3.10.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BenchmarksActivity.cs" />
@@ -33,5 +34,4 @@
     </KniContentReference>
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
