--- a/src/ContentBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net6.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
     <PackageReference Include="MonoGame.Framework.WindowsDX.9000" Version="3.10.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
   </ItemGroup>
   <ItemGroup>
     <KniContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
@@ -29,5 +30,4 @@
     </KniContentReference>
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
