--- a/src/DrawBenchmarks/Benchmarks.Kni.BlazorGL/Benchmarks.BlazorGL.net6.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.BlazorGL/Benchmarks.BlazorGL.net6.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
     <PackageReference Include="nkast.Xna.Framework.Blazor" Version="3.10.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />
   </ItemGroup>
@@ -36,5 +37,4 @@
     </KniContentReference>
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
