--- a/src/DrawBenchmarks/Benchmarks.Kni.UWP.Core/Benchmarks.Kni.UWP.Core.net4.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.UWP.Core/Benchmarks.Kni.UWP.Core.net4.csproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
     <PackageReference Include="MonoGame.Framework.WindowsUniversal.9000" Version="3.10.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -126,5 +127,4 @@
   </PropertyGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
