--- a/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net4.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net4.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
     <PackageReference Include="MonoGame.Framework.WindowsDX.9000" Version="3.10.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -64,5 +65,4 @@
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
