--- a/src/DrawBenchmarks/Benchmarks.Fna.OpenGL/Benchmarks.Fna.DesktopGL.net4.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Fna.OpenGL/Benchmarks.Fna.DesktopGL.net4.csproj
@@ -55,6 +55,12 @@
     <KniContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
       <Link>Content\BenchmarksContent.mgcb</Link>
     </KniContentReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
+  </ItemGroup>
+	  
+  <ItemGroup>
     <None Include="app.config" />
     <None Include="FNA23.07\fnalibs\x64\SDL2.dll">
       <Link>SDL2.dll</Link>
@@ -80,5 +86,4 @@
   </ItemGroup>
   <Import Project="..\Benchmarks.Shared\Benchmarks.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\Kni.Content.Builder.targets" />
 </Project>
