--- a/src/ContentBenchmarks/Benchmarks.Kni.BlazorGL/Benchmarks.BlazorGL.net6.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.BlazorGL/Benchmarks.BlazorGL.net6.csproj
@@ -24,11 +24,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Blazor" Version="3.10.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />
+    <PackageReference Include="nkast.Xna.Framework" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Graphics" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Audio" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Media" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Blazor" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.11.9001" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.27" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.27" PrivateAssets="all" />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.2" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
