--- a/src/ContentBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net6.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net6.csproj
@@ -23,9 +23,13 @@
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.10.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
+    <PackageReference Include="nkast.Xna.Framework" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Graphics" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Audio" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Media" Version="3.11.9001" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL.9000" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.11.9001" />
   </ItemGroup>
   <ItemGroup>
     <KniContentReference Include="..\BenchmarksContent\BenchmarksContent.mgcb">
