--- a/src/ContentBenchmarks/Benchmarks.Kni.UWP.Core/Benchmarks.Kni.UWP.Core.net4.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.UWP.Core/Benchmarks.Kni.UWP.Core.net4.csproj
@@ -88,9 +88,13 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="nkast.Xna.Framework" Version="3.10.9001" />
-    <PackageReference Include="MonoGame.Framework.WindowsUniversal.9000" Version="3.10.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
+    <PackageReference Include="nkast.Xna.Framework" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Graphics" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Audio" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Media" Version="3.11.9001" />
+    <PackageReference Include="MonoGame.Framework.WindowsUniversal.9000" Version="3.11.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.11.9001" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
