--- a/src/DrawBenchmarks/Benchmarks.Fna.OpenGL/Benchmarks.Fna.DesktopGL.net6.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Fna.OpenGL/Benchmarks.Fna.DesktopGL.net6.csproj
@@ -26,7 +26,7 @@
     </KniContentReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.10.9001-rc" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.11.9001" />
   </ItemGroup>
 	
   <ItemGroup>
